@@ -1,3 +1,9 @@
+Tue Jan 19 11:14:18 CET 2016
+	Removed workaround for Cygwin non-blocking sockets:
+	handling non-blocking sockets were fixed in Cygwin
+	and libmicrohttpd how uses non-blocking sockets on
+	all platforms. -EG
+
 Mon Jan 18 23:54:45 CET 2016
 	Cleaned up examples to avoid giving oversimplified code
 	that may lead to complications if adopted naively. -CG
